RESOLVED FIXED201696
Posting a message to a redundant service worker should fail silently instead of throwing
https://bugs.webkit.org/show_bug.cgi?id=201696
Summary Posting a message to a redundant service worker should fail silently instead ...
Chris Dumez
Reported 2019-09-11 13:40:06 PDT
Posting a message to a redundant service worker should fail silently instead of throwing: - https://w3c.github.io/ServiceWorker/#dom-serviceworker-postmessage-message-options - https://w3c.github.io/ServiceWorker/#run-service-worker (step 2)
Attachments
Patch (4.59 KB, patch)
2019-09-11 13:44 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-11 13:44:38 PDT
Geoffrey Garen
Comment 2 2019-09-11 14:43:27 PDT
Comment on attachment 378576 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-09-11 15:38:11 PDT
Comment on attachment 378576 [details] Patch Clearing flags on attachment: 378576 Committed r249781: <https://trac.webkit.org/changeset/249781>
WebKit Commit Bot
Comment 4 2019-09-11 15:38:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-11 15:39:20 PDT
Note You need to log in before you can comment on or make changes to this bug.