Posting a message to a redundant service worker should fail silently instead of throwing https://bugs.webkit.org/show_bug.cgi?id=201696

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT test now that one more check is passing.

* web-platform-tests/service-workers/service-worker/postmessage.https-expected.txt:

Source/WebCore:

Posting a message to a redundant service worker should fail silently instead of throwing:
- https://w3c.github.io/ServiceWorker/#dom-serviceworker-postmessage-message-options
- https://w3c.github.io/ServiceWorker/#run-service-worker (step 2)

No new tests, rebaselined existing test.

* workers/service/ServiceWorker.cpp:
(WebCore::ServiceWorker::postMessage):
* workers/service/server/SWServer.cpp:
(WebCore::SWServer::runServiceWorkerIfNecessary):


Canonical link: https://commits.webkit.org/215339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249781 268f45cc-cd09-0410-ab3c-d52691b4dbfc